--- a/weapp/mall/templates/mall/editor/offshelf_products.html
+++ b/weapp/mall/templates/mall/editor/offshelf_products.html
@@ -173,6 +173,9 @@
 						</div>
 						</br>
 						<a href="javascript:void(0);" class="xa-delete">彻底删除</a>
+						{{if data.data.mall_type == 1}}
+						<a href="/mall2/product_members/?id=${product.id}" class="xui-block">购买会员</a>
+						{{/if}}
 					</td>
 				</tr>
 				{{/each}}
