--- a/weapp/static_v2/js/view/common_select_website_link_view/template.html
+++ b/weapp/static_v2/js/view/common_select_website_link_view/template.html
@@ -25,8 +25,8 @@
     {{if card_exchange}}
     <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="cardExchange">兑换平台</a></li>
     {{/if}}
-    {{if card_exchange_money}}
-    <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="cardExchangeMoney">现金兑换平台</a></li>
+    {{if card_exchange_cash}}
+    <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="cardExchangeCash">现金兑换平台</a></li>
     {{/if}}
 </ul>
 </script>
