[f_mall_9447][侯庭飞]coding

--- a/weapp/mall/templates/mall/editor/product_member.html
+++ b/weapp/mall/templates/mall/editor/product_member.html
@@ -147,7 +147,7 @@
 			data-selectable="true"
 			data-item-count-per-page="50"
 			class="panel-body"
-			data-args='{"id":7}'
+			data-args='{"id":"{{id}}"}'
 			data-disable-header-select="true"
 			data-user-webapp-id={{user.get_profile.webapp_id}}
 			data-download-excel-app="member"
