没完没了的修改

--- a/weapp/account/templates/account/landing/index.html
+++ b/weapp/account/templates/account/landing/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="/landing_static/css/landing-main.css" type="text/css">
 {% endblock %}
 {% block content %}
-<div class="logo"><img src="/landing_static/img/index/top.jpg" style="display:block;"></div><!--banner-->
+<div class="logo"><img src="/landing_static/img/index/top.png" style="display:block;"></div><!--banner-->
 <!--login-->
 <div class="login">
   <div class="login-form"> 
