购买会员页全部功能和交互修改

--- a/weapp/static_v2/css/member.css
+++ b/weapp/static_v2/css/member.css
@@ -224,7 +224,7 @@
 	position: relative;
 }
 .xui-memberListPage .xui-cancelCover{
-	width:50%;
+	width:41px;
 	background-color:rgba(0, 0, 0, 0.5);
 	position:absolute;
 	bottom:0;
