--- a/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_login.html
+++ b/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_login.html
@@ -82,7 +82,8 @@
                 }),
 		        success: function(data) {
 		        	if(data.code == 200) {
-		        		window.location.href = './?module=market_tool:weizoom_card&model=weizoom_card_change_money&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&card_id='+data.id+'&normal='+normal;
+                        var card_infos = JSON.stringify(data.card_infos);
+		        		window.location.href = './?module=market_tool:weizoom_card&model=weizoom_card_change_money&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&card_infos='+card_infos+'&normal='+normal;
 		        	} else {
 		        		$('body').alert({
 				            isShow: true,
